<resources>
    <string name="app_name">RecipeSaving</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="add_recipes">Add Recipes</string>
    <string name="add_shop_list">Add Shopping List</string>
    <string name="placeholder">Placeholder</string>
    <string name="recipes">Recipes</string>
    <string name="shop_list">Shop List</string>
    <string name="time">%1$smins</string>
    <string name="instruction">Instruction</string>
    <string name="amount">Amount</string>
    <string name="ingredient">Ingredient</string>
    <string name="unit">Unit</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="overview">Overview</string>
    <string name="instructions">Instructions</string>
    <string name="categories">Categories:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="amount_colon">Amount:</string>
    <string name="serving_colon">Servings:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_delete_shop_item">Are you sure you want to delete this Item?\n(This cannot be undone.)</string>
    <string name="are_you_sure_delete_shop_list">Are you sure you want to delete this Shopping List?\n(This cannot be undone.)</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this Recipe?\n(This cannot be undone.)</string>
    <string name="i_m_feeling_lucky">I\'m feeling lucky!</string>
    <string name="submit">Submit</string>
    <string name="serving_size">Serving Size</string>
    <string name="time_taken">Time Taken</string>
    <string name="ingredients_colon">Ingredients:</string>
    <string name="category_colon">Category:</string>
    <string name="instructions_colon">Instructions:</string>
    <string name="description_colon">Description:</string>
    <string name="description_cannot_be_empty">*Description cannot be empty</string>
    <string name="description">Description</string>
    <string name="title_colon">Title:</string>
    <string name="instructions_cannot_be_empty">*Instructions cannot be empty</string>
    <string name="ingredients_cannot_be_empty">*Ingredients cannot be empty</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="add_stores">Add Stores</string>
    <string name="location_colon">Location:</string>
    <string name="add">Add</string>
    <string name="store_name">Store Name</string>
    <string name="location">Location</string>
    <string name="store_location">Store Location</string>
    <string name="name">Name</string>
    <string name="store_details">Store Details</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="title">Title</string>
    <string name="store_product_add">Store Product Add</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="related_ingredient">Related Ingredient</string>
    <string name="amount_and_unit">Amount and Unit</string>
    <string name="price">Price</string>
    <string name="store_item_amount">%1$s%2$s</string>
    <string name="shopping_list">Shopping List</string>
    <string name="store">Store</string>
    <string name="store_detail_price">RM %.2f</string>
    <string name="shoplist_store_display">Store: %1$s</string>
    <string name="shopping_list_price">Price: %1$d x RM%2$.2f = RM%3$.2f</string>
    <string name="shopping_list_amount_unit">Amount: %1$.2f%2$s</string>
    <string name="click_to_add_image">Click to add Image</string>
    <string name="title_cannot_be_empty">*Title cannot be empty</string>
    <string name="category_cannot_be_empty">*Category cannot be empty</string>
    <string name="est_time">Est Time:</string>
    <string name="servings">Servings:</string>
    <string name="items">Items:</string>
    <string name="unavailable_at_location">"Unavailable at this location."</string>
    <string name="delete_item">Are you sure you want to delete this Item?</string>
    <string name="delete_store">Are you sure you want to delete this Store?</string>
    <string name="unknown_location">Unknown location</string>

</resources>