<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/space_xs"
    android:weightSum="10">

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient"
        android:textSize="@dimen/text_xl"
        android:layout_weight="5"
        android:background="@drawable/edit_text_bg" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:textSize="@dimen/text_xl"
        android:layout_weight="3"
        android:background="@drawable/edit_text_bg"
        android:layout_marginHorizontal="@dimen/space_xs"/>

    <Spinner
        android:id="@+id/spUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/unit"
        android:textSize="@dimen/text_xl"
        android:layout_weight="2"
        android:background="@drawable/edit_text_bg"/>

</LinearLayout>